--- a/TheBoxDrop/TheBoxDrop/Views/Base.lproj/Main.storyboard
+++ b/TheBoxDrop/TheBoxDrop/Views/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eVk-uI-0w7" customClass="DropboxFileCollectionViewCell" customModule="TheBoxDrop" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="dropboxFileCell" id="eVk-uI-0w7" customClass="DropboxFileCollectionViewCell" customModule="TheBoxDrop" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="5CW-PW-qBV">
@@ -104,6 +104,10 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="N8e-n5-rNy" id="Xcz-UU-r29"/>
+                                    <outlet property="delegate" destination="N8e-n5-rNy" id="OE5-7V-5Db"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
